# volleyball

./: .gitignore  README.md  constants.py  extract_features.py  main.py  pyproject.toml  utils.py
.run/: Ruff Check.run.xml  Ruff Format.run.xml
data/: annotation.py  utils.py  volleyball_dataset.py
datasets/: features_dataset.py  group_dataset.py  person_dataset.py  temporal_features_dataset.py
models/: baseline1.py  baseline3_a.py  baseline3_b.py  baseline4.py  baseline5.py  baseline6.py  baseline7.py  baseline8.py  features_classifier.py  group_classifier.py  group_temporal_classifier.py  image_classifier.py  person_classifier.py
trainers/: train_b1.py  train_b3_a.py  train_b3_b.py  train_b4.py  train_b5.py  train_b6.py  train_b7.py  train_b8.py
utils/: data_utils.py  logger.py  train_utils.py
